# hashes

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.ipynb
.github/workflows/: cmake.yml
data/: hash_erase_int.csv  hash_erase_real_data.csv  hash_erase_string.csv  hash_find_int.csv  hash_find_real_data.csv  hash_find_string.csv  hash_insert_int.csv  hash_insert_real_data.csv  hash_insert_string.csv
hashes/: CMakeLists.txt
hashes/include/: benchmark.hpp  hash_map_chained.hpp  hash_map_cuckoo.hpp  hash_open_addressing.hpp  hashes.hpp
hashes/src/: hashes.cpp
tests/: CMakeLists.txt  hash_tests.cpp  main.cpp
